# ghakuf

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
examples/: example.rs
src/: formats.rs  lib.rs  messages.rs  reader.rs  writer.rs
src/reader/: handler.rs  mod.rs  read_error.rs  reader.rs
src/writer/: mod.rs  write_error.rs  writer.rs
tests/: test.mid  test.rs
