[package]
authors = ["acknak <acknak39@gmail.com>"]
description = "A Rust library for parsing/building SMF (Standard MIDI File)."
license = "MIT/Apache-2.0"
keywords = ["SMF", "MIDI", "parser", "reader", "builder", "writer"]
name = "ghakuf"
readme = "README.md"
repository = "https://github.com/acknak/ghakuf"
version = "0.2.1"

[dependencies]
byteorder = "1.0.0"
log = "0.3"

[lib]
name = "ghakuf"
path = "src/lib.rs"
