[package]
authors = ["acknak <acknak39@gmail.com>"]
description = "A Rust library for parsing/building SMF (Standard MIDI File)."
license = "MIT/Apache-2.0"
keywords = ["SMF", "MIDI", "parser", "builder"]
name = "ghakuf"
readme = "README.md"
repository = "https://github.com/acknak/ghakuf"
version = "0.5.4"

[badges]
travis-ci = { repository = "acknak/ghakuf" }

[dependencies]
byteorder = "1"
log = "0.4"

[lib]
name = "ghakuf"
path = "src/lib.rs"
